@@ -75,3 +75,9 @@ ROSETTA_REQUIRES_AUTH = getattr(settings, 'ROSETTA_REQUIRES_AUTH', True)
 
 # Exclude paths defined in this list from being searched (usually ends with "locale")
 ROSETTA_EXCLUDED_PATHS =  getattr(settings, 'ROSETTA_EXCLUDED_PATHS', ())
+
+# Set to True to enable language-specific groups, which can be used to give
+# different translators access to different languages. Instead of creating a
+# 'translators` group, create individual per-language groups, e.g.
+# 'translators-de', 'translators-fr', ...
+ROSETTA_LANGUAGE_GROUPS = getattr(settings, 'ROSETTA_LANGUAGE_GROUPS', False)
